Hello, I added the p tags along with the Lorem Ipsum text. Break <br> tags to break up the paragrahs so that the resding is legible. Added more padding to the image. And the corrected the horizontal line width.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Helevetica Neue ', 'Arial', Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif ,'Helevetica Neue ', 'Arial', Arial, Helvetica, sans-serif;
     margin: 0 auto;
     background-image: url("../images/padded.png");
     background-repeat: repeat;
@@ -25,9 +25,15 @@ body{
 .mainFooterBackground{
     background: #666666;
 }
+
+.mainFooterBorder{
+    border-top: 4px solid teal;
+}
+
 .mainContentBackground{
     background: #ffffff;
 }
+
 .mainContentBorder{
     border: 1px solid #dddddd;
 }
@@ -39,13 +45,41 @@ nav{
 
 .mainContent{
     width: 960px;
-    height: 70vh;
+    height: 77vh;
     margin: 0 auto;
     margin-top:20px;
+    padding-left:30px;
 }
 .footer{
     width: 100%;
     height: 50px;
     position: fixed;
     bottom: 0;
+}
+.bigContentText{
+    color: teal;
+    font-size: 26px;
+    font-weight: 800;
+}
+.horizontalLine{
+    width: 950px;
+    height: 3px;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f5f6f6+0,dbdce2+21,b8bac6+49,dddfe3+80,f5f6f6+100;Grey+Pipe */
+background: rgb(245,246,246); /* Old browsers */
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.profileImg{
+    width:200px;
+    clear:both;
+    float:left;
+    padding-right:15px;
+    padding-bottom: 15px;
+}
+.loremIpsum{
+    text-align: left;
+    margin-top:10px;
+    line-height: 20px;
+
 }
